# apps/backend/internal/db/sqlc/generated/models.go
@@ -1,0 +1,62 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.30.0
+
+package sqlc
+
+import (
+	"time"
+
+	"github.com/google/uuid"
+	"github.com/jackc/pgx/v5/pgtype"
+)
+
+type Job struct {
+	ID           uuid.UUID        `json:"id"`
+	Type         string           `json:"type"`
+	Payload      []byte           `json:"payload"`
+	Status       string           `json:"status"`
+	RetryCount   int32            `json:"retry_count"`
+	MaxRetries   int32            `json:"max_retries"`
+	ErrorMessage *string          `json:"error_message"`
+	ScheduledAt  time.Time        `json:"scheduled_at"`
+	ProcessedAt  time.Time        `json:"processed_at"`
+	CreatedAt    time.Time        `json:"created_at"`
+	UpdatedAt    time.Time        `json:"updated_at"`
+	DeletedAt    pgtype.Timestamp `json:"deleted_at"`
+}
+
+type MagicLink struct {
+	ID              uuid.UUID        `json:"id"`
+	PendingSignupID uuid.UUID        `json:"pending_signup_id"`
+	TokenHash       string           `json:"token_hash"`
+	ExpiresAt       pgtype.Timestamp `json:"expires_at"`
+	CreatedAt       time.Time        `json:"created_at"`
+	UpdatedAt       time.Time        `json:"updated_at"`
+	DeletedAt       pgtype.Timestamp `json:"deleted_at"`
+}
+
+type PendingSignup struct {
+	ID              uuid.UUID        `json:"id"`
+	FullName        pgtype.Text      `json:"full_name"`
+	Email           pgtype.Text      `json:"email"`
+	DisplayName     *string          `json:"display_name"`
+	EmailVerifiedAt pgtype.Timestamp `json:"email_verified_at"`
+	Status          string           `json:"status"`
+	ExpiresAt       pgtype.Timestamp `json:"expires_at"`
+	CreatedAt       time.Time        `json:"created_at"`
+	UpdatedAt       time.Time        `json:"updated_at"`
+	DeletedAt       pgtype.Timestamp `json:"deleted_at"`
+}
+
+type User struct {
+	ID          uuid.UUID        `json:"id"`
+	FullName    pgtype.Text      `json:"full_name"`
+	Email       pgtype.Text      `json:"email"`
+	Address     string           `json:"address"`
+	DisplayName *string          `json:"display_name"`
+	AvatarUrl   *string          `json:"avatar_url"`
+	CreatedAt   time.Time        `json:"created_at"`
+	UpdatedAt   time.Time        `json:"updated_at"`
+	DeletedAt   pgtype.Timestamp `json:"deleted_at"`
+}
